# encora

./: .gitignore  CMakeLists.txt
cmake/: ConfigCompilerWarnings.cmake  ConfigStaticAnalysis.cmake  FindLibsodium.cmake  FindNlohmannJson.cmake
include/encora/: Encora.h
src/cli/: CLIOptions.cpp  CLIOptions.h  CMakeLists.txt  main_cli.cpp
src/encora_app/: ApplicationController.cpp  ApplicationController.h  CMakeLists.txt  main.cpp
src/encora_app/resources/: resources.qrc
src/encora_app/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/encora_core/: CMakeLists.txt  VaultMetadataIO.cpp  VaultMetadataIO.h
src/encora_core/core/: CryptoEngine.cpp  CryptoEngine.h  VaultManager.cpp  VaultManager.h  VaultMetadata.h
src/encora_core/core/platform/: PlatformPaths.h  PlatformSecureMemory.h  PlatformSecureMemoryUnix.cpp
src/encora_core/core/secrets/: KeyDerivation.cpp  KeyDerivation.h  KeyWrap.cpp  KeyWrap.h  SecureWiper.h
src/encora_core/core/types/: SecureBuffer.h  VaultTypes.h
src/encora_core/core/utils/: Base64.cpp  Base64.h  HMAC.cpp  HMAC.h  Logger.cpp  Logger.h  Version.h
src/encora_core/security/: IntegrityChecker.cpp  IntegrityChecker.h  ManifestWriter.cpp  ManifestWriter.h
src/encora_core/storage/: EncryptedVaultStorage.cpp  EncryptedVaultStorage.h  LocalEncryptedStorage.cpp  LocalEncryptedStorage.h  StorageBackend.h  StorageError.h  StorageIndex.cpp  StorageIndex.h  StorageRecord.h  VaultExporter.cpp  VaultExporter.h
tests/: CMakeLists.txt
tests/core/: test_KeyDerivation.cpp
